@@ -1,5 +1,4 @@
 general:
-  * cleanup symbol leaks
   * finish error handling
   * handle video destroyed w/images outstanding
   * dbg_scan background image stretched (still...)
@@ -14,7 +13,6 @@ wrappers:
   * widget config APIs
   * drag-and-drop for widgets (configurable...)
   * Perl build support integration?
-  * Perl object lifetime problems? (eg Symbol)
   * GTK and Qt perl bindings
   * C++ global wrappers
 
