@@ -292,6 +292,12 @@ BOOT:
         CONSTANT(symbol_type, , CODE128, zbar_get_symbol_name(ZBAR_CODE128));
     }
 
+void
+DESTROY(symbol)
+        Barcode::ZBar::Symbol symbol
+    CODE:
+        zbar_symbol_ref(symbol, -1);
+
 zbar_symbol_type_t
 zbar_symbol_get_type(symbol)
 	Barcode::ZBar::Symbol symbol
@@ -385,9 +391,12 @@ get_symbols(image)
         const zbar_symbol_t *sym;
     PPCODE:
 	sym = zbar_image_first_symbol(image);
-	for(; sym; sym = zbar_symbol_next(sym))
+        for(; sym; sym = zbar_symbol_next(sym)) {
+            zbar_symbol_t *s = (zbar_symbol_t*)sym;
+            zbar_symbol_ref(s, 1);
             XPUSHs(sv_setref_pv(sv_newmortal(), "Barcode::ZBar::Symbol",
                    (void*)sym));
+        }
 
 void
 zbar_image_set_format(image, format)
@@ -450,7 +459,7 @@ DESTROY(processor)
         zbar_processor_destroy(processor);
 
 void
-zbar_processor_init(processor, video_device="/dev/video0", enable_display=1)
+zbar_processor_init(processor, video_device="", enable_display=1)
         Barcode::ZBar::Processor	processor
         const char *	video_device
 	bool	enable_display
