@@ -349,7 +349,8 @@ static void convert_copy (zbar_image_t *dst,
         dst->datalen = src->datalen;
         dst->cleanup = cleanup_ref;
         dst->next = (zbar_image_t*)src;
-        _zbar_image_refcnt((zbar_image_t*)src, 1);
+        zbar_image_t *s = (zbar_image_t*)src;
+        _zbar_image_refcnt(s, 1);
     }
     else
         /* NB only for GRAY/YUV_PLANAR formats */
